Translating in english, started charts

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,6 @@
 /node_modules/
 /bower_components/*
 !/bower_components/startbootstrap-sb-admin-2
+!/bower_components/libs
 /src/assets/css/
 /nbproject/
