Updated jshint conf file

--- a/.jshintrc
+++ b/.jshintrc
@@ -11,6 +11,7 @@
     "module"    : false,
     "Highcharts" : false,
     "EventSource": false,
-    "moment": false
+    "moment": false,
+    "insert": false
   }
 }
