--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,11 @@ sudo: required
 services:
 - docker
 node_js:
-- 6.2.2
+- 6.4.0
 script:
 - npm run build
 - docker build -t ${DOCKER_USER}/charts .
-- docker login -e ${DOCKER_EMAIL} -u ${DOCKER_USER} -p ${DOCKER_PASS}
+- docker login -u ${DOCKER_USER} -p ${DOCKER_PASS}
 - docker push ${DOCKER_USER}/charts
 notifications:
   email: false
@@ -18,10 +18,8 @@ before_deploy:
 deploy:
   provider: script
   skip_cleanup: true
-  script: ssh -o StrictHostKeyChecking=no ${SSH_USER}@${SSH_HOST} "bash -s" -- < ./deploy.sh
-    charts https://github.com/lili1725/angular-es-charts.git lili1725.fr
+  script: ssh -o StrictHostKeyChecking=no ${SSH_USER}@${SSH_HOST} "bash -s" -- < ./deploy.sh charts https://github.com/lili1725/angular-es-charts.git lili1725.fr
   on:
     branch: master
 before_install:
-- openssl aes-256-cbc -K $encrypted_afb3f4a0fd37_key -iv $encrypted_afb3f4a0fd37_iv
-  -in deploy_rsa.enc -out deploy_rsa -d
+- openssl aes-256-cbc -K $encrypted_afb3f4a0fd37_key -iv $encrypted_afb3f4a0fd37_iv -in deploy_rsa.enc -out deploy_rsa -d
