--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '2'
 services:
   charts:
     image: lili1725/charts
-    command: --domain "elasticsearch.vibioh.fr *.googleapis.com *.gstatic.com"
+    command: -domain "elasticsearch.vibioh.fr *.googleapis.com *.gstatic.com"
     labels:
       traefik.frontend.passHostHeader: 'true'
       traefik.frontend.rule: 'Host: charts.${DOMAIN}'
