Fixing moving Marker on responsive width

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "scripts": {
     "bower": "./node_modules/.bin/bower install",
     "gulp": "./node_modules/.bin/gulp build-dist",
+    "start": "./node_modules/.bin/gulp",
     "build": "npm install && npm run bower && npm run gulp"
   },
   "author": "",
