--- a/bower.json
+++ b/bower.json
@@ -10,20 +10,20 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "latest",
-    "angular-i18n": "latest",
-    "angular-bootstrap": "latest",
-    "angular-ui-router": "latest",
-    "bootstrap": "latest",
-    "font-awesome": "latest",
-    "angular-animate": "latest",
-    "highstock-release": "latest",
-    "highcharts-ng": "latest",
-    "angular-spinner": "latest",
-    "lodash": "latest",
-    "angular-google-maps": "latest"
+    "angular": "1.6.4",
+    "angular-i18n": "1.6.4",
+    "angular-bootstrap": "2.5.0",
+    "angular-ui-router": "0.4.2",
+    "bootstrap": "3.3.7",
+    "font-awesome": "4.7.0",
+    "angular-animate": "1.6.4",
+    "highstock-release": "5.0.10",
+    "highcharts-ng": "1.1.0",
+    "angular-spinner" : "1.0.1",
+    "lodash": "4.17.4",
+    "angular-google-maps": "2.4.1"
   },
   "resolutions": {
-    "angular": "1.6.1"
+    "angular": "1.6.4"
   }
 }
