--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,12 @@
     "highcharts-ng": "1.1.0",
     "angular-spinner" : "1.0.1",
     "lodash": "4.17.4",
-    "angular-google-maps": "2.4.1"
+    "angular-google-maps": "2.4.1",
+    "jasmine-core": "2.5.2",
+    "karma": "0.4.6",
+    "karma-chrome-launcher": "2.0.0",
+    "karma-jasmine": "1.1.0",
+    "angular-mocks": "1.6.4"
   },
   "resolutions": {
     "angular": "1.6.4"
