Fixed npm modules versions and changed font-awesome path

--- a/package.json
+++ b/package.json
@@ -2,21 +2,21 @@
   "name": "conservatories",
   "version": "0.0.1",
   "devDependencies": {
-    "bower": "latest",
-    "gulp": "latest",
-    "jshint": "latest",
-    "del": "latest",
-    "gulp-concat": "latest",
-    "gulp-connect": "latest",
-    "gulp-inject": "latest",
-    "gulp-angular-filesort": "latest",
-    "gulp-clean-css": "latest",
-    "gulp-htmlmin": "latest",
-    "gulp-imagemin": "latest",
-    "gulp-rename": "latest",
+    "bower": "1.8.0",
+    "gulp": "3.9.1",
+    "jshint": "2.9.4",
+    "del": "3.0.0",
+    "gulp-concat": "2.6.1",
+    "gulp-connect": "5.0.0",
+    "gulp-inject": "4.2.0",
+    "gulp-angular-filesort": "1.1.1",
+    "gulp-clean-css": "3.4.1",
+    "gulp-htmlmin": "3.0.0",
+    "gulp-imagemin": "3.3.0",
+    "gulp-rename": "1.2.2",
     "gulp-sass": "2.3.1",
-    "gulp-uglify": "latest",
-    "gulp-usemin": "latest",
+    "gulp-uglify": "3.0.0",
+    "gulp-usemin": "0.3.28",
     "gulp-watch": "4.3.6",
     "gulp-jshint": "2.0.1",
     "gulp-notify": "2.2.0",
