--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     - default-src 'self' elasticsearch.vibioh.fr *.googleapis.com *.gstatic.com; script-src 'self' 'unsafe-inline' maps.googleapis.com; style-src 'self' 'unsafe-inline' fonts.googleapis.com
     labels:
       traefik.frontend.passHostHeader: 'true'
-      traefik.frontend.rule: 'Host: charts.lili1725.fr'
+      traefik.frontend.rule: 'Host: charts.eponae.fr'
       traefik.port: '1080'
     logging:
       driver: json-file
