--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "karma-chrome-launcher": "2.2.0",
     "karma-jasmine": "1.1.0",
     "angular-mocks": "1.6.6",
-    "angular-chart.js": "1.1.1"
+    "zingchart": "2.6.1",
+    "zingchart-angularjs": "1.2.0"
   },
   "description": "## Usage ### Requirements * [NodeJS](http://nodejs.org/) (with [NPM](https://www.npmjs.org/)) * [Gulp](http://gulpjs.com)",
   "main": "gulpfile.js",
