--- a/package.json
+++ b/package.json
@@ -1,24 +1,27 @@
 {
   "name": "conservatories",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "devDependencies": {
     "del": "3.0.0",
     "gulp": "3.9.1",
-    "gulp-angular-filesort": "1.1.1",
-    "gulp-clean-css": "3.4.0",
     "gulp-concat": "2.6.1",
     "gulp-connect": "5.0.0",
-    "gulp-htmlmin": "3.0.0",
-    "gulp-imagemin": "3.3.0",
-    "gulp-inject": "4.2.0",
-    "gulp-jshint": "2.0.1",
-    "gulp-notify": "2.2.0",
+    "gulp-imagemin": "3.4.0",
     "gulp-rename": "1.2.2",
-    "gulp-sass": "2.3.1",
+    "gulp-sass": "3.1.0",
     "gulp-uglify": "3.0.0",
+    "gulp-clean-css": "3.9.0",
     "gulp-usemin": "0.3.28",
-    "gulp-watch": "4.3.6",
-    "jshint": "2.9.4",
+    "gulp-load-plugins": "1.5.0",
+    "gulp-ng-annotate": "2.0.0",
+    "gulp-sourcemaps": "2.6.1",
+    "gulp-jshint": "2.0.4",
+    "browserify": "14.5.0",
+    "babelify": "7.3.0",
+    "babel-preset-es2015": "^6.9.0",
+    "vinyl-buffer": "1.0.0",
+    "vinyl-source-stream": "1.1.0",
+    "jshint": "2.9.5",
     "jshint-stylish": "2.2.0",
     "run-sequence": "1.2.1",
     "angular": "1.6.6",
