--- a/package.json
+++ b/package.json
@@ -2,36 +2,28 @@
   "name": "conservatories",
   "version": "0.0.2",
   "devDependencies": {
-    "del": "3.0.0",
-    "gulp": "3.9.1",
-    "gulp-concat": "2.6.1",
-    "gulp-connect": "5.0.0",
-    "gulp-imagemin": "3.4.0",
-    "gulp-rename": "1.2.2",
-    "gulp-sass": "3.1.0",
-    "gulp-uglify": "3.0.0",
-    "gulp-clean-css": "3.9.0",
-    "gulp-usemin": "0.3.28",
-    "gulp-load-plugins": "1.5.0",
-    "gulp-ng-annotate": "2.0.0",
-    "gulp-sourcemaps": "2.6.1",
-    "gulp-jshint": "2.0.4",
-    "browserify": "14.5.0",
-    "babelify": "7.3.0",
-    "babel-preset-es2015": "^6.9.0",
-    "vinyl-buffer": "1.0.0",
-    "vinyl-source-stream": "1.1.0",
-    "jshint": "2.9.5",
-    "jshint-stylish": "2.2.0",
-    "run-sequence": "1.2.1",
+    "webpack": "3.8.1",
+    "webpack-dev-server": "2.9.3",
+    "copy-webpack-plugin": "4.2.0",
+    "extract-text-webpack-plugin": "3.0.1",
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.2",
+    "babel-preset-env": "1.6.1",
+    "babel-eslint": "8.0.1",
+    "eslint": "4.9.0",
+    "eslint-loader": "1.9.0",
+    "eslint-plugin-import": "2.8.0",
+    "eslint-config-airbnb-base": "12.1.0",
+    "css-loader": "0.28.7",
+    "style-loader": "0.19.0",
+    "sass": "1.0.0-beta.2",
+    "node-sass": "4.5.3",
+    "sass-loader": "6.0.6",
     "angular": "1.6.6",
     "angular-i18n": "1.6.6",
     "angular-ui-bootstrap": "2.5.6",
     "angular-ui-router": "0.4.3",
     "bootstrap": "3.3.7",
-    "angular-animate": "1.6.6",
-    "angular-spinner": "1.0.1",
-    "lodash": "4.17.4",
     "angular-google-maps": "2.4.1",
     "jasmine-core": "2.8.0",
     "karma": "1.7.1",
@@ -44,9 +36,9 @@
   "description": "## Usage ### Requirements * [NodeJS](http://nodejs.org/) (with [NPM](https://www.npmjs.org/)) * [Gulp](http://gulpjs.com)",
   "main": "gulpfile.js",
   "scripts": {
-    "gulp": "node_modules/gulp/bin/gulp.js build-dist",
-    "start": "node_modules/gulp/bin/gulp.js",
-    "build": "npm install && npm run gulp",
+    "webpack": "node_modules/webpack/bin/webpack.js",
+    "start": "node_modules/.bin/webpack-dev-server --hot --inline --content-base dist --history-api-fallback",
+    "build": "npm install && npm run webpack",
     "test": "node_modules/karma/bin/karma start karma.conf.js"
   },
   "author": "Alice R",
