--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "conservatories",
   "version": "0.0.2",
   "devDependencies": {
+    "lodash": "4.17.4",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.3",
-    "copy-webpack-plugin": "4.2.0",
     "extract-text-webpack-plugin": "3.0.1",
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
@@ -14,11 +14,13 @@
     "eslint-loader": "1.9.0",
     "eslint-plugin-import": "2.8.0",
     "eslint-config-airbnb-base": "12.1.0",
+    "prettier-eslint-cli": "4.4.0",
     "css-loader": "0.28.7",
     "style-loader": "0.19.0",
     "sass": "1.0.0-beta.2",
     "node-sass": "4.5.3",
     "sass-loader": "6.0.6",
+    "file-loader": "1.1.5",
     "angular": "1.6.6",
     "angular-i18n": "1.6.6",
     "angular-ui-bootstrap": "2.5.6",
@@ -37,7 +39,16 @@
   "main": "gulpfile.js",
   "scripts": {
     "webpack": "node_modules/webpack/bin/webpack.js",
-    "start": "node_modules/.bin/webpack-dev-server --hot --inline --content-base dist --history-api-fallback",
+    "format": "prettier-eslint \"src/**/*.js\"",
+    "clean": "rm -fr ./dist && mkdir ./dist",
+    "copy-index": "cp ./src/index.html ./dist/",
+    "copy-fonts": "cp -a ./node_modules/bootstrap/fonts/. ./dist/fonts/",
+    "copy-assets": "npm run copy-fonts && npm run copy-icon && npm run copy-img",
+    "copy-icon": "cp -a ./src/assets/favicon/. ./dist/",
+    "copy-img": "cp -a ./src/assets/img/. ./dist/img/",
+    "copy-templates": "mkdir -p ./dist/templates && cp -Ra ./src/scripts/**/*.html ./dist/templates/",
+    "copy": "npm run copy-index && npm run copy-templates && npm run copy-assets",
+    "start": "npm run clean && npm run copy && npm run format && node_modules/.bin/webpack-dev-server --port 4242 --hot --content-base dist/",
     "build": "npm install && npm run webpack",
     "test": "node_modules/karma/bin/karma start karma.conf.js"
   },
