--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "conservatories",
   "version": "0.0.2",
   "devDependencies": {
-    "lodash": "4.17.4",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.3",
     "extract-text-webpack-plugin": "3.0.1",
@@ -21,19 +20,10 @@
     "node-sass": "4.5.3",
     "sass-loader": "6.0.6",
     "file-loader": "1.1.5",
-    "angular": "1.6.6",
-    "angular-i18n": "1.6.6",
-    "angular-ui-bootstrap": "2.5.6",
-    "angular-ui-router": "0.4.3",
-    "bootstrap": "3.3.7",
-    "angular-google-maps": "2.4.1",
     "jasmine-core": "2.8.0",
     "karma": "1.7.1",
     "karma-chrome-launcher": "2.2.0",
-    "karma-jasmine": "1.1.0",
-    "angular-mocks": "1.6.6",
-    "zingchart": "2.6.1",
-    "zingchart-angularjs": "1.2.0"
+    "karma-jasmine": "1.1.0"
   },
   "description": "## Usage ### Requirements * [NodeJS](http://nodejs.org/) (with [NPM](https://www.npmjs.org/)) * [Gulp](http://gulpjs.com)",
   "main": "gulpfile.js",
@@ -62,5 +52,17 @@
     "url": "https://github.com/eponae/angular-es-charts/issues"
   },
   "homepage": "https://github.com/eponae/angular-es-charts#readme",
-  "dependencies": {}
+  "dependencies": {
+    "lodash": "4.17.4",
+    "angular": "1.6.6",
+    "angular-i18n": "1.6.6",
+    "angular-ui-bootstrap": "2.5.6",
+    "angular-ui-router": "0.4.3",
+    "bootstrap": "3.3.7",
+    "angular-google-maps": "2.4.1",
+    "zingchart": "2.6.1",
+    "zingchart-angularjs": "1.2.0",
+    "angular-mocks": "1.6.6",
+    "angular-simple-logger": "0.1.7"
+  }
 }
