--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "devDependencies": {
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.3",
+    "uglifyjs-webpack-plugin": "1.0.1",
     "extract-text-webpack-plugin": "3.0.1",
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
@@ -14,6 +15,7 @@
     "eslint-plugin-import": "2.8.0",
     "eslint-config-airbnb-base": "12.1.0",
     "prettier-eslint-cli": "4.4.0",
+    "html-loader": "0.5.1",
     "css-loader": "0.28.7",
     "style-loader": "0.19.0",
     "sass": "1.0.0-beta.2",
@@ -35,7 +37,7 @@
     "copy-index": "cp ./src/index.html ./dist/",
     "copy": "npm run copy-index && npm run copy-templates && npm run copy-assets",
     "prebuild": "npm run clean && npm run copy && npm run format",
-    "start": "npm run prebuild && node_modules/.bin/webpack-dev-server --port 4242 --content-base dist/",
+    "start": "npm run prebuild && node_modules/.bin/webpack-dev-server --port 4242 --hot --content-base dist/",
     "build": "npm install && npm run prebuild && npm run webpack"
   },
   "author": "Alice R",
