Added hash in css and js

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "webpack-dev-server": "2.9.3",
     "uglifyjs-webpack-plugin": "1.0.1",
     "extract-text-webpack-plugin": "3.0.1",
+    "html-webpack-plugin": "2.30.1",
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
     "babel-preset-env": "1.6.1",
@@ -26,18 +27,17 @@
   "description": "## Usage ### Requirements * [NodeJS](http://nodejs.org/) (with [NPM](https://www.npmjs.org/)) * [Gulp](http://gulpjs.com)",
   "main": "gulpfile.js",
   "scripts": {
-    "webpack": "node_modules/webpack/bin/webpack.js",
+    "webpack": "webpack",
     "format": "prettier-eslint \"src/**/*.js\"",
     "clean": "rm -fr ./dist && mkdir ./dist",
-    "copy-fonts": "mkdir -p ./dist/fonts && rsync -av ./node_modules/material-design-icons/iconfont/MaterialIcons-Regular.{eot,ijmap,svg,ttf,woff,woff2} ./dist/fonts/",
+    "copy-fonts": "mkdir -p ./dist/fonts && cp ./node_modules/material-design-icons/iconfont/MaterialIcons-Regular.{eot,ijmap,svg,ttf,woff,woff2} ./dist/fonts/",
     "copy-icon": "cp -a ./src/assets/favicon/. ./dist/",
     "copy-img": "cp -a ./src/assets/img/. ./dist/img/",
     "copy-assets": "npm run copy-fonts && npm run copy-icon && npm run copy-img",
     "copy-templates": "mkdir -p ./dist/templates && cp ./src/scripts/**/**/marker-window.html ./dist/templates/marker-window.html",
-    "copy-index": "cp ./src/index.html ./dist/",
-    "copy": "npm run copy-index && npm run copy-templates && npm run copy-assets",
+    "copy": "npm run copy-templates && npm run copy-assets",
     "prebuild": "npm run clean && npm run copy && npm run format",
-    "start": "npm run prebuild && node_modules/.bin/webpack-dev-server --port 4242 --hot --content-base dist/",
+    "start": "npm run prebuild && webpack-dev-server --port 4242 --hot --open --content-base dist/",
     "build": "npm install && npm run prebuild && npm run webpack"
   },
   "author": "Alice R",
