Externalized api key and added sass linter

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,16 @@ script: |
 after_success: |
   if [ "${TRAVIS_BRANCH}" == "master" ]; then
     docker login -u ${DOCKER_USER} -p ${DOCKER_PASS} && docker push ${DOCKER_USER}/charts
+
+    sed \
+          -e "s|\${GOOGLE_MAPS_KEY}|${GOOGLE_MAPS_KEY}|g" \
+          docker-compose.yml > docker-compose-env.yml
   fi
 notifications:
   email: false
 deploy:
   provider: script
   skip_cleanup: true
-  script: 'curl -H "Authorization: GitHub ${GITHUB_OAUTH_TOKEN}" -X POST https://dashboard-api.vibioh.fr/containers/charts/ --data-binary @docker-compose.yml'
+  script: 'curl -H "Authorization: GitHub ${GITHUB_OAUTH_TOKEN}" -X POST https://dashboard-api.vibioh.fr/containers/charts/ --data-binary @docker-compose-env.yml'
   on:
     branch: master
