--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,14 @@ services:
     command:
     - -csp
     - "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' maps.googleapis.com; style-src 'self' 'unsafe-inline' fonts.googleapis.com; font-src 'self' fonts.gstatic.com; img-src 'self' data: csi.gstatic.com maps.gstatic.com maps.googleapis.com; connect-src 'self' api.eponae.fr"
+    - -env
+    - GOOGLE_MAPS_KEY
     labels:
       traefik.frontend.passHostHeader: 'true'
       traefik.frontend.rule: 'Host: charts.eponae.fr'
       traefik.port: '1080'
+    environment:
+      GOOGLE_MAPS_KEY: '${GOOGLE_MAPS_KEY}'
     logging:
       driver: json-file
       options:
