--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "uglifyjs-webpack-plugin": "1.0.1",
     "extract-text-webpack-plugin": "3.0.1",
     "html-webpack-plugin": "2.30.1",
+    "sasslint-webpack-plugin": "1.0.4",
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
     "babel-preset-env": "1.6.1",
@@ -20,6 +21,7 @@
     "css-loader": "0.28.7",
     "style-loader": "0.19.0",
     "sass": "1.0.0-beta.2",
+    "sass-lint": "1.12.1",
     "node-sass": "4.5.3",
     "sass-loader": "6.0.6",
     "file-loader": "1.1.5"
@@ -29,14 +31,14 @@
   "scripts": {
     "format": "prettier-eslint \"src/**/*.js\"",
     "clean": "rm -fr ./dist && mkdir ./dist",
-    "copy-fonts": "mkdir -p ./dist/fonts && ls -al ./node_modules/material-design-icons/iconfont/ && cp ./node_modules/material-design-icons/iconfont/MaterialIcons-Regular.* ./dist/fonts/",
+    "copy-fonts": "mkdir -p ./dist/fonts && cp ./node_modules/material-design-icons/iconfont/MaterialIcons-Regular.* ./dist/fonts/",
     "copy-icon": "cp -a ./src/assets/favicon/. ./dist/",
     "copy-img": "cp -a ./src/assets/img/. ./dist/img/",
     "copy-assets": "npm run copy-fonts && npm run copy-icon && npm run copy-img",
     "copy-templates": "mkdir -p ./dist/templates && cp ./src/scripts/**/**/marker-window.html ./dist/templates/marker-window.html",
     "copy": "npm run copy-templates && npm run copy-assets",
     "prebuild": "npm run clean && npm run copy && npm run format",
-    "start": "npm run prebuild && webpack-dev-server --port 4242 --hot --open --content-base dist/",
+    "start": "npm run prebuild && GOOGLE_MAPS_KEY=AIzaSyDOaHhIXyhaoX9I692e6YUBVYCicLvED5A webpack-dev-server --port 4242 --hot --open --content-base dist/",
     "build": "webpack"
   },
   "author": "Alice R",
