--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "devDependencies": {
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.3",
-    "uglifyjs-webpack-plugin": "1.0.1",
     "extract-text-webpack-plugin": "3.0.1",
     "html-webpack-plugin": "2.30.1",
     "sasslint-webpack-plugin": "1.0.4",
@@ -29,7 +28,7 @@
   "description": "## Usage ### Requirements * [NodeJS](http://nodejs.org/) (with [NPM](https://www.npmjs.org/)) * [Gulp](http://gulpjs.com)",
   "main": "gulpfile.js",
   "scripts": {
-    "format": "prettier-eslint \"src/**/*.js\"",
+    "format": "prettier-eslint --write \"src/**/*.js\"",
     "clean": "rm -fr ./dist && mkdir ./dist",
     "copy-fonts": "mkdir -p ./dist/fonts && cp ./node_modules/material-design-icons/iconfont/MaterialIcons-Regular.* ./dist/fonts/",
     "copy-icon": "cp -a ./src/assets/favicon/. ./dist/",
@@ -39,7 +38,7 @@
     "copy": "npm run copy-templates && npm run copy-assets",
     "prebuild": "npm run clean && npm run copy && npm run format",
     "start": "npm run prebuild && GOOGLE_MAPS_KEY=AIzaSyDOaHhIXyhaoX9I692e6YUBVYCicLvED5A webpack-dev-server --port 4242 --hot --open --content-base dist/",
-    "build": "webpack"
+    "build": "PROD=true webpack -p"
   },
   "author": "Alice R",
   "license": "ISC",
