--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,6 @@ services:
   site:
     image: eponae/charts
     command:
-    - -prometheusMetricsHost
-    - charts:1080
     - -csp
     - "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' maps.googleapis.com; style-src 'self' 'unsafe-inline' fonts.googleapis.com; font-src 'self' fonts.gstatic.com; img-src 'self' data: csi.gstatic.com maps.gstatic.com maps.googleapis.com; connect-src 'self' api.eponae.fr"
     - -env
@@ -14,6 +12,10 @@ services:
       traefik.frontend.passHostHeader: 'true'
       traefik.frontend.rule: 'Host: charts.eponae.fr'
       traefik.port: '1080'
+      traefik.frontend.rateLimit.extractorFunc: 'client.ip'
+      traefik.frontend.rateLimit.rateSet.first.period: 60
+      traefik.frontend.rateLimit.rateSet.first.average: 100
+      traefik.frontend.rateLimit.rateSet.first.burst: 200
     environment:
       GOOGLE_MAPS_KEY: '${GOOGLE_MAPS_KEY}'
     logging:
