--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     - "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' maps.googleapis.com; style-src 'self' 'unsafe-inline' fonts.googleapis.com; font-src 'self' fonts.gstatic.com; img-src 'self' data: csi.gstatic.com maps.gstatic.com maps.googleapis.com; connect-src 'self' api.eponae.fr"
     - -env
     - GOOGLE_MAPS_KEY
+    - -datadogService
+    - eponae_charts
     labels:
       traefik.frontend.passHostHeader: 'true'
       traefik.frontend.rule: 'Host: charts.eponae.fr'
@@ -19,6 +21,8 @@ services:
       traefik.frontend.rateLimit.rateSet.first.burst: '200'
     environment:
       GOOGLE_MAPS_KEY: '${GOOGLE_MAPS_KEY}'
+    external_links:
+    - monitoring_agent:dd-agent
     logging:
       driver: json-file
       options:
