DOwngrading to node 9 and removing deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ jobs:
     sudo: required
     services:
     - docker
-    node_js: 10
+    node_js: 9
     script: |
       npm run build && \
       docker build -t ${DOCKER_USER}/charts .
@@ -16,21 +16,21 @@ jobs:
         docker push ${DOCKER_USER}/charts
       fi
 
-  - stage: Deploy
+  # - stage: Deploy
 
-    script: |
-      sed \
-        -e "s|\${GOOGLE_MAPS_KEY}|${GOOGLE_MAPS_KEY}|g" \
-        docker-compose.yml > docker-compose-env.yml
-    deploy:
-      provider: script
-      skip_cleanup: true
-      script: 'curl -H "Authorization: GitHub ${GITHUB_OAUTH_TOKEN}" -X POST https://dashboard-api.vibioh.fr/containers/charts/ --data-binary @docker-compose.yml'
+  #   script: |
+  #     sed \
+  #       -e "s|\${GOOGLE_MAPS_KEY}|${GOOGLE_MAPS_KEY}|g" \
+  #       docker-compose.yml > docker-compose-env.yml
+  #   deploy:
+  #     provider: script
+  #     skip_cleanup: true
+  #     script: 'curl -H "Authorization: GitHub ${GITHUB_OAUTH_TOKEN}" -X POST https://dashboard-api.vibioh.fr/containers/charts/ --data-binary @docker-compose.yml'
 
 stages:
   - Build
-  - name: Deploy
-    if: branch = master
+  # - name: Deploy
+  #   if: branch = master
 
 notifications:
   email: false
