Changing deploy endpoint

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ jobs:
   #   deploy:
   #     provider: script
   #     skip_cleanup: true
-  #     script: 'curl -H "Authorization: GitHub ${GITHUB_OAUTH_TOKEN}" -X POST https://dashboard-api.vibioh.fr/containers/charts/ --data-binary @docker-compose.yml'
+  #     script: 'curl -H "Authorization: GitHub ${GITHUB_OAUTH_TOKEN}" -X POST https://dashboard-api.vibioh.fr/deploy/charts/ --data-binary @docker-compose.yml'
 
 stages:
   - Build
